tests/ui/unimplemented_generics.stderr
error: custom attribute panicked
  --> $DIR/unimplemented_generics.rs:14:1
   |
14 | #[use_ast]
   | ^^^^^^^^^^
   |
   = help: message: not implemented: Generics and lifetimes are currently not supported (yet?). Please fill an issue at `https://github.com/wafflelapkin/arbitrary_wrappers` describing your use case.
